--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 /*reset*/
-/*reset*/
 body, dl, dt, dd, ul, ol, h1, h2, h3, h4, h5, h6, form, input, textarea, p, table, th, td {
     margin: 0;
     padding: 0
@@ -12,7 +11,6 @@ html {
 
 body {
     width: 100%;
-    /*min-width: 1000px;*/
     font: 12px/18px Arial, Helvetica, sans-serif;
     background: #fff
 }
@@ -72,148 +70,162 @@ a:hover {
     height: 0
 }
 
-
-/*html{
-    font-size:100px;
-}
-.top{
-    height:1.28rem;
-    width:100%;
+.header{
     background: #f54343;
-    margin: 0 auto;
+    height:.84rem;
+    position: relative;
 }
-.nav a{
-    padding:.17rem .11rem;
-
-    !*border-top:6px solid transparent;*!
-    margin: 0 1px;
-    !*display: inline-block;*!
-    font-size: .22rem;
-    !*box-sizing:border-box;!*什么用*!*!
-}
-.nav a:hover{
-    border-bottom: 6px solid #f54343 ;
-}*/
-.v-mobile-header {
-    width: 100%;
-    height: .94rem;
-    background: #f54343;
-}
-
-.v-mobile-header .i-logo {
-    float: left;
-    width: 2.2rem;
-    height: .46rem;
+.header .logo{
     text-indent: -999px;
-    margin: .2rem 0 0 .19rem;
-}
-
-.v-mobile-header .i-logo a {
+    float: left;/*浮动解决父节点继承子节点margin*/
     display: block;
-    width: 2.2rem;
-    height: .46rem;
-    background: url("images/iphone_logo.png") no-repeat;
+    width:2.2rem;
+    height:.46rem;
+    background: url("images/iphone_logo.png");
     background-size: cover;
-    -webkit-background-size: cover;
+    margin: .18rem auto auto .2rem;
 }
-.v-mobile-header .i-login{
-    width: .38rem;
-    height:.38rem;
+.header i{
     float: right;
-}
-.v-mobile-header .i-login .i-login-search{
-    display: block;
+    margin-right:.4rem;
+    margin-top:.2rem;
     width: .38rem;
     height:.38rem;
-    background: url("images/iphone_search.png") no-repeat;
+}
+.header i.search{
+    background: url("images/iphone_search.png");
     background-size: cover;
-    -webkit-background-size: cover;
 }
-.top-menu{
-    width:100%;
-    overflow: hidden;
-    overflow-x: auto;;
+.header i.clock{
+    background: url("images/iphone_clock.png");
+    background-size: cover;
+}
 
+.nav-inner{
+    /*border-right: 18px solid rgba(155,235,143,.5);*/
+    margin-right: .3rem;
+    height: .8rem;
+    overflow-x: auto;
+    white-space: nowrap;/*很重要*/
+    -webkit-overflow-scrolling: touch;
+    overflow-scrolling: touch
 }
-.top-menu::-webkit-scrollbar{
+.nav-inner::-webkit-scrollbar{
     display: none;
 }
-.top-menu-inner{
-    /*height:.8rem;
-    line-height: .8rem;*//*为什么加上就不行*/
-    white-space: nowrap;
-    font-size: 0;/*为什么*/
-}
-.top-menu-inner a{
-    height:.8rem;
-    line-height: .8rem;
-    color: #6b7989;
-    display: inline-block;
-    width:1.07rem;
+.nav-inner a{
     text-align: center;
+    display: inline-block;
+    height: .7rem;
+    line-height: .7rem;
+    color: #6b7989;
     font-size: .34rem;
+    width:1rem;
+    text-decoration: none;
+    border-bottom: .05rem solid #fff;
+    border-top: .05rem solid #fff;
 }
-.top-menu-inner a.cur{
-    height: .75rem;
-    line-height: .75rem;
+.nav-inner a.cur{
     border-bottom: .05rem solid #f54343;
 }
-.focus{
+.swiper-container{
+    position: relative;
+}
+.swiper-container .cover{
+    display:block;
+    height:4.22rem;
     width:100%;
-    /*height:4.42rem;*/
-    position: relative;
+    background-size: cover;
 }
-/*.swiper-container{
-    height: 100%;
-}
-.swiper-wrapper{
-    height:100%;
-    overflow: hidden;
-}
-.swiper-slide{
-    height: 100%;
-    position: relative;
-}*/
-.focus img{
-    width:100%;/*一定要设置宽度*/
-    /*height: 100%;*/
-     display: block;
-}
-.focus .swiper-container{
-    /*height:100%;   !*??????????????????????????????*!*/
-}
-.focus .swiper-slide h3{
-    bottom:0;
+.swiper-container h3{
+    position: absolute;
+    bottom: 0;/*.13rem*/
     left:0;
-    width: 100%;
-    padding-left:.15rem;
-    line-height:.6rem;
-    position: absolute;
-    font-size: .326rem;
-    color: #ffffff;
-    background: rgba(0, 0, 0, 0.6);
+    color:#fff;
+    font-size: .33rem;
+    height:.6rem;
+    line-height: .6rem;
+    background: rgba(0,0,0,.5);
 }
-.focus .swiper-slide h3 span{
-    font-size: .28rem;
+.swiper-container h3 span{
+    vertical-align: .05rem;
+    margin-left: .18rem;
+    margin-right: .1rem;
+    padding: .03rem .08rem .05rem .1rem;
     background: #f54343;
-    padding: 0.03rem 0.06rem;
-    margin-right: 0.1rem;
-    color: #fff;
+    font-size: .28rem;
 }
-.focus .swiper-pagination{
-    position: absolute;
-    left: 50%;
-    width: 1.6rem;
-    bottom: .9rem;
-    color: #bf9c8a;
+.swiper-container .swiper-pagination-bullets{
+    bottom: .6rem;
 }
-.focus .swiper-pagination-bullet {
-    margin-right: .15rem
+.swiper-pagination .swiper-pagination-bullet{
+    margin-right:.15rem;
+    background-color: #dab08c;
+    opacity: .6;
 }
-
-.focus .swiper-pagination-bullet-active {
+.swiper-pagination .swiper-pagination-bullet-active {
     background: #fff
 }
+.i-item{
+    padding:.24rem .3rem;
+}
+.i-pic{
+    width:1.82rem;
+    float: left;
+}
+.i-pic img{
+    width: 100%;
+}
+.i-data{
+    height: 1.3rem;
+    margin-left: 2.14rem;
+    position: relative;
+}
+.i-desc{position: absolute;bottom: 0;width: 100%;}
+.i-title{font-size: .36rem;line-height: .44rem;max-height: .88rem;overflow: hidden}
+.i-desc div{float: left;font-size: .22rem;}
+.i-text .i-desc{position: inherit;padding-top:.25rem;}
+.i-desc .i-flag,.i-desc .i-num{
+    float: right;
+}
+.i-text{
+    margin-left: 0;
+    height: auto;
+}
 
+.i-text .i-mutiPic{
+    width:102%;
+    padding-top:.25rem;
+}
+.i-text .i-mutiPic img{
+    width:2.24rem;
+    float: left;
+    margin-right: .09rem;
+}
+.i-video{padding-top:.25rem;position: relative}
+.i-video img{
+    width: 100%;
+    float: left;
+    /*height:3.88rem*/
+}
+.i-video .i-play{position:absolute;width: 1.10rem;left:50%;margin-left: -.55rem;top:40%;text-align: center;font-size: .22rem;color: #fff}
+.i-video .i-play .playBtn{display:block;width:100%;height:1.10rem;background: url("images/video.png");background-size: cover;-webkit-background-size:cover;margin-bottom: .2rem}
 
-
+.footer{
+    padding:0rem .24rem;
+    height:.97rem;
+    background: #f8f7f7;
+    line-height: 1.2rem;
+    color: #6b7989;
+    position: fixed;
+    bottom: 0;
+    width: 7.1rem;
+    z-index: 999;
+}
+.footer a{
+    display: inline-block;
+    width: 1.24rem;
+    text-align: center;
+    font-size: .24rem;
+    line-height: .44rem;
+}
